cocogen/tests/pass/nodesets.ccn

root node ast {
    attributes {
        int val {}
    }
};

node a {
    attributes {
        int val {}
    }
};

node b {
    attributes {
        int val {}
    }
};

start phase begin {
    actions {
        pass p;
    }
};


nodeset x = {ast};
nodeset y = {a, b, ast};
nodeset z = y - x;
nodeset m = y - y;
nodeset g = m - y;
nodeset l = x | m;
nodeset nn = m | x;
nodeset nnn = m & x;
nodeset nnnn = x & m;

traversal Letsgo {
    uid = go,

    travdata {
        int val,
        ast ast
    }
};
